--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@tailwindcss/vite": "^4.1.17",
     "@types/node": "^24.10.1",
     "@vitejs/plugin-react": "^5.1.2",
+    "autoprefixer": "^10.4.22",
     "lucide-react": "^0.556.0",
     "mobx": "^6.15.0",
     "mobx-react": "^9.2.1",
     "mobx-react-observer": "^1.1.0",
+    "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwindcss": "^4.1.17"
+    "tailwind": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
@@ -29,6 +31,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.2.0",
+    "tailwindcss": "^4.1.18",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.34.1",
     "vite": "^7.0.0"
